[package]
name = "stellar-data"
version = "0.1.0"
edition = "2021"

[dependencies]
stellar-xdr = { version = "24.0.0", default-features = false, features = ["curr", "serde", "serde_json", "base64"] }
stellar-strkey = "0.0.13"
reqwest = { version = "0.12", features = ["blocking", "json"] }
clap = { version = "4.5", features = ["derive"] }
zstd = "0.13"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
