[package]
name = "stellar-data"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A command line tool and REST API for querying the Stellar blockchain using public data lakes and RPC nodes, providing JSON formatted responses to simplify data availability"
readme = "README.md"
homepage = "https://jamesbachini.com"
repository = "https://github.com/jamesbachini/Stellar-Data"
keywords = ["stellar", "soroban", "data"]
categories = ["cryptography::cryptocurrencies", "development-tools", "api-bindings", "command-line-utilities"]

[dependencies]
stellar-xdr = { version = "24.0.0", default-features = false, features = ["curr", "serde", "serde_json", "base64"] }
stellar-strkey = "0.0.13"
reqwest = { version = "0.12", features = ["blocking", "json"] }
clap = { version = "4.5", features = ["derive"] }
zstd = "0.13"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
